<resources>
    <string name="app_name">Paint Application</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">Create New Drawing</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="colorselector">Select Color</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="new_drawing">NewDrawing</string>

    <string name="create_new_drawing">New drawing</string>
    <string name="create_new_prompt">Start new drawing (you will lose the current drawing)?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>

    <string name="brushsize">Brush size:</string>
    <string name="ok">OK</string>
    <string name="erasersize">Eraser size:</string>

    <string name="savedrawing">Save drawing</string>
    <string name="savedrawingtogallery">Save drawing to device Gallery?</string>
    <string name="saved">Drawing saved to Gallery!</string>
    <string name="notsaved">Oops! Image could not be saved.</string>
</resources>
